# AGD

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml
benchmarks/: CMakeLists.txt  profile.cpp  timings.hpp  ur5.cpp
bindings/: CMakeLists.txt  grg.cpp  grg_adahessian.cpp  grg_nonlinear.cpp  main.cpp
bindings/grg/: __init__.py
include/grg/: grg.hpp  grg_adahessian.hpp  grg_nonlinear.hpp  python.hpp
kuka_dgh/config/: circle_grg.yml  square_cssqp.yml
kuka_dgh/controllers/: 123.py  circle_grg.py  circle_ssqp.py  square_cssqp.py
kuka_dgh/demos/: launch_expe.py  launch_test.py  launch_utils.py
kuka_dgh/plots/: paper_plot.py  plot_compare_grg_single_multi.py  plot_compare_grg_ssqp.py  plot_grg.py  plot_ssqp.py
python/: SolverALGRG.py
python/mpc/: drawing_circle_kuka_mpc.py  mpc_utils.py  pin_utils.py
python/unittest/: example.py  test_sqp.py  unitTest.py
src/: grg.cpp  grg_adahessian.cpp  grg_nonlinear.cpp
unittest/: CMakeLists.txt  unittest.cpp
